# devops_lab5_GitHub_Actions

./: Dockerfile  pyproject.toml  requirements.txt
.github/workflows/: build-and-delivery.yml  tests af.yml  tests.yml
tests/: test_user.py
