[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "devops_lab5"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "pydantic-settings",
    "python-dotenv"
]

[project.optional-dependencies]
test = [
    "pytest",
    "httpx",
    "pytest-asyncio"
]